@@ -15,9 +15,10 @@ the connection between the API and the backend.  SimpleLogging includes calls di
 can be chosen through code or configuration. This direct calling allows for more control over the backend selection and
 usually fewer dependencies.
 
-SimpleLogging is also designed to be copied into your open source project so you don't have to add a maven dependency.
-Just copy the java files from ``src/main/java`` into your source tree and rename the packages as necessary.  Please also
-copy the ``SIMPLELOGGING_LICENSE.txt`` file which is the very permissive ISC license.
+SimpleLogging is designed to be copied into your open source project so you don't have to add a maven dependency. Just
+copy the java files from ``src/main/java`` into your source tree and rename the packages as necessary.  Please also copy
+the ``SIMPLELOGGING_LICENSE.txt`` file which is the very permissive ISC license.  You may want to change the constants in
+``LoggerConstants.java``.
 
 * The source code be found on the [git repository](https://github.com/j256/simplelogging).  [![CircleCI](https://circleci.com/gh/j256/simplelogging.svg?style=svg)](https://circleci.com/gh/j256/simplelogging) [![CodeCov](https://img.shields.io/codecov/c/github/j256/simplelogging.svg)](https://codecov.io/github/j256/simplelogging/)
 * Maven packages are published via [![Maven Central](https://maven-badges.herokuapp.com/maven-central/com.j256.simplelogging/simplelogging/badge.svg?style=flat-square)](https://maven-badges.herokuapp.com/maven-central/com.j256.simplelogging/simplelogging/) [![javadoc](https://javadoc.io/badge2/com.j256.simplelogging/simplelogging/javadoc.svg)](https://javadoc.io/doc/com.j256.simplelogging/simplelogging)
